[package]
name = "province"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

[features]
sync = []
async = []

[dependencies]
http = "^0.2"
reqwest = { version = "0.10.10", features = ["blocking"], optional = true}
isahc = { version = "^1", optional = true }
bytes = "^0.5"
